fix: align nav items and highlight Leistungen on subpages
Fix MDI icon vertical alignment in nav bar. Highlight Leistungen
link when on any service subpage.

--- a/_sass/_nav.scss
+++ b/_sass/_nav.scss
@@ -52,7 +52,8 @@
 
     .mdi {
       font-size: 0.85rem;
-      vertical-align: middle;
+      line-height: 1;
+      vertical-align: -1px;
     }
 
     &:hover,
